--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/Geek.ico" />
-    <link rel="icon" href=<"%PUBLIC_URL%/Geek.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/Geek.ico" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
